Viewport Shading 'Depth Of Field' 'Wireframe' / 'Bounding Box' issue #44594

Closed
opened 2015-05-03 20:07:59 +02:00 by David Black · 10 comments

System Information
Windows 7 x64
GNU/Linux Mint 17.1 Cinnamon x64

HD 3000
GTX 580m

Blender Version
2.74 x64 (000dfc0) Windows and GNU/Linux
2.74.5 gooseberry (e4b1b17) Windows and GNU/Linux
2.74.5 gooseberry (920aa5e) Windows and GNU/Linux

Short description of error
Viewport Shading 'Depth Of Field' focal point calculation issue happens when objects are close to camera while using 'Wireframe' or 'Bounding Box' display modes.

Exact steps for others to reproduce the error
After opening attached .blend.
Viewport_Depth_Of_Field_wireframe_issue.blend
Press keyboard keys 'g' then 'y' to grab and move the Focal Point object along the Y axis, in all Viewport Shading modes (except for 'Wireframe' and 'Bounding Box') the focus follows the Focal Point object as expected.Solid_mode_Depth_Of_Field_.jpg

Reset the Focal Point object.

Switch Viewport Shading to 'Wireframe', even before moving the 'Focal Point' object, it is obvious the area in focus has moved.Wireframe_mode_Depth_Of_Field_.jpg Now moving the 'Focal Point' object has the reverse effect, as the 'Focal Point' object progresses further along the Y axis towards infinity (or behind the camera), the cylinder object comes into focus.

Real world examples (chair object is to actual size with 1 Blender unit equaling a 1 meter).
2015-05-01_00_51_27.jpg
2015-05-01_00_51_31.jpg

Tested on Windows 7 and GNU/Linux Mint, with Intel HD 3000 then NVIDIA GTX 580m graphics cards.

David

**System Information** Windows 7 x64 GNU/Linux Mint 17.1 Cinnamon x64 HD 3000 GTX 580m **Blender Version** 2.74 x64 (000dfc0) Windows and GNU/Linux 2.74.5 gooseberry (e4b1b17) Windows and GNU/Linux 2.74.5 gooseberry (920aa5e) Windows and GNU/Linux **Short description of error** Viewport Shading 'Depth Of Field' focal point calculation issue happens when objects are close to camera while using 'Wireframe' or 'Bounding Box' display modes. **Exact steps for others to reproduce the error** After opening attached .blend. [Viewport_Depth_Of_Field_wireframe_issue.blend](https://archive.blender.org/developer/F169718/Viewport_Depth_Of_Field_wireframe_issue.blend) Press keyboard keys '**g**' then '**y**' to grab and move the Focal Point object along the Y axis, in all Viewport Shading modes (except for 'Wireframe' and 'Bounding Box') the focus follows the Focal Point object as expected.![Solid_mode_Depth_Of_Field_.jpg](https://archive.blender.org/developer/F169723/Solid_mode_Depth_Of_Field_.jpg) Reset the Focal Point object. Switch Viewport Shading to 'Wireframe', even before moving the 'Focal Point' object, it is obvious the area in focus has moved.![Wireframe_mode_Depth_Of_Field_.jpg](https://archive.blender.org/developer/F169725/Wireframe_mode_Depth_Of_Field_.jpg) Now moving the 'Focal Point' object has the reverse effect, as the 'Focal Point' object progresses further along the Y axis towards infinity (or behind the camera), the cylinder object comes into focus. Real world examples (chair object is to actual size with 1 Blender unit equaling a 1 meter). ![2015-05-01_00_51_27.jpg](https://archive.blender.org/developer/F169727/2015-05-01_00_51_27.jpg) ![2015-05-01_00_51_31.jpg](https://archive.blender.org/developer/F169729/2015-05-01_00_51_31.jpg) Tested on Windows 7 and GNU/Linux Mint, with Intel HD 3000 then NVIDIA GTX 580m graphics cards. David
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @david_black

Added subscriber: @david_black
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-05-04 12:41:25 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue - also maybe interesting, if you combine solid and wireframe object in same view, DoF effect seems OK.

Antony, bet this one is for you. :)

Can confirm the issue - also maybe interesting, if you combine solid and wireframe object in same view, DoF effect seems OK. Antony, bet this one is for you. :)

Things are simple:

Scene does not use depth buffer at all in wire mode, so all points have the same depth (1.0). Basically moving the focus point just applies the same effect to all the scene according to how close the focus is to the far plane. Probably deactivating effects in wireframe is the thing to do after all.

Things are simple: Scene does not use depth buffer at all in wire mode, so all points have the same depth (1.0). Basically moving the focus point just applies the same effect to all the scene according to how close the focus is to the far plane. Probably deactivating effects in wireframe is the thing to do after all.

This issue was referenced by 73c090fe81

This issue was referenced by 73c090fe81fcc6f0966681171377412d0b4d1da4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 73c090fe81.

Closed by commit 73c090fe81.
Author

Sorry been unable to reply sooner.

Thank you for your quick commit.

One further question, should the viewport Transform Widget be affected by DoF (below image)?
Viewport_Depth_Of_Field_Transform_Widget_issue.jpg

Reference .blend
Viewport_Depth_Of_Field_Transform_Widget_issue.blend

David

Sorry been unable to reply sooner. Thank you for your quick commit. One further question, should the viewport Transform Widget be affected by DoF (below image)? ![Viewport_Depth_Of_Field_Transform_Widget_issue.jpg](https://archive.blender.org/developer/F171482/Viewport_Depth_Of_Field_Transform_Widget_issue.jpg) Reference .blend [Viewport_Depth_Of_Field_Transform_Widget_issue.blend](https://archive.blender.org/developer/F171484/Viewport_Depth_Of_Field_Transform_Widget_issue.blend) David

It shouldn't but I tried fixing this and it's causing issues elsewhere unfortunately.

It shouldn't but I tried fixing this and it's causing issues elsewhere unfortunately.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44594
No description provided.