Fix T44594 disable depth of field in wireframe/bounding box modes. We don't supply depth information in those modes so supporting the effects does not really make sense